--- a/README.org
+++ b/README.org
@@ -4,9 +4,9 @@
 ** Workflow
 - =lein uberjar=
 - Edit =resources/muscle-structure.org=
-- Export Org file to CSV (=org-table-export=)
+- Export Org file[[https://orgmode.org/]] to CSV (=org-table-export=)
 - =java -jar target/uberjar/muscles.jar > cards.txt=
-- Import =cards.txt= into Anki
+- Import =cards.txt= into [[https://apps.ankiweb.net/][Anki]]
 - Memorize away!
 
 ** Why?
