--- a/resources/muscle-structure.org
+++ b/resources/muscle-structure.org
@@ -1,7 +1,13 @@
-|-----------+----------------------+----------------------+----------------------+----------------------+----------------------|
-| Name      | Origin               | Insertion            | Function             | Overlaps             | Overlapped by        |
-|-----------+----------------------+----------------------+----------------------+----------------------+----------------------|
-|           | <20>                 | <20>                 | <20>                 | <20>                 | <20>                 |
-| Sartorius | Just below tip of ASIS | Pes anserinus, on tibia | flexes, weakly abducts, rotates upper leg; flexes and medially rotates lower leg | Gracilis, Rectus Femoris, Vastus Medialis, Adductor Longus | None                 |
-| Deltoid   | lateral 1/3 of clavicle, acromion process, spine of scapula | Deltoid tuberosity halfway down humerus | flex arm forward, abducts outward, pulls backward | Biceps brachii, tendon of pectoralis, infraspinatus, supraspinatus, teres major/minor, upper triceps | None                 |
-|-----------+----------------------+----------------------+----------------------+----------------------+----------------------|
+|------------+----------------------+----------------------+----------------------+----------------------+----------------------|
+| Name       | Origin               | Insertion            | Function             | Overlaps             | Overlapped by        |
+|------------+----------------------+----------------------+----------------------+----------------------+----------------------|
+|            | <20>                 | <20>                 | <20>                 | <20>                 | <20>                 |
+| Sartorius  | Just below tip of ASIS | Pes anserinus, on tibia | flexes, weakly abducts, rotates upper leg; flexes and medially rotates lower leg | Gracilis, Rectus Femoris, Vastus Medialis, Adductor Longus | None                 |
+| Deltoid    | lateral 1/3 of clavicle, acromion process, spine of scapula | Deltoid tuberosity halfway down humerus | flex arm forward, abducts outward, pulls backward | Biceps brachii, tendon of pectoralis, infraspinatus, supraspinatus, teres major/minor, upper triceps | None                 |
+| Multifidus | Sacrum, PSIS, spinous processes of vertebrae | Spinous processes of all vertebrae but the atlas | extend, laterally flex, rotate vertebral column | None                 | Gluteus maximus, Erector spinae, trapezius |
+|------------+----------------------+----------------------+----------------------+----------------------+----------------------|
+
+Sources:
+- https://www.physio-pedia.com/Lumbar_multifidus
+- https://en.wikipedia.org/wiki/Multifidus_muscle
+- https://books.google.com/books/about/Human_Anatomy_for_Artists_The_Elements_o.html?id=Clre5l9lqyUC
