Add non-license license.

--- a/README.org
+++ b/README.org
@@ -12,3 +12,7 @@
 ** Why?
 
 A figurative artist has to know his or her muscles, er, inside out.
+
+* License
+
+Not much here, but use it how you like.
