--- a/resources/muscle-structure.org
+++ b/resources/muscle-structure.org
@@ -5,7 +5,8 @@
 | Sartorius       | Just below tip of ASIS | Pes anserinus, on tibia | flexes, weakly abducts, rotates upper leg; flexes and medially rotates lower leg | Gracilis, Rectus Femoris, Vastus Medialis, Adductor Longus | None                 |
 | Deltoid         | lateral 1/3 of clavicle, acromion process, spine of scapula | Deltoid tuberosity halfway down humerus | flex arm forward, abducts outward, pulls backward | Biceps brachii, tendon of pectoralis, infraspinatus, supraspinatus, teres major/minor, upper triceps | None                 |
 | Multifidus      | Sacrum, PSIS, spinous processes of vertebrae | Spinous processes of all vertebrae but the atlas | extend, laterally flex, rotate vertebral column | None                 | Gluteus maximus, Erector spinae, trapezius |
-| Scalenus Medius | Transferse processes from C2-C7 (occasionally C1) | Medial part of top of first rib | Bends neck laterally; lifts first rib during forced inspiration | None                 | Sternocleidomastoid, Omohyoid, Trapezius |
+| Scalenus Medius  | Transferse processes from C2-C7 (occasionally C1) | Medial part of top of first rib | Bends neck laterally; lifts first rib during forced inspiration | None                 | Sternocleidomastoid, Omohyoid, Trapezius |
+| Vastus Medialis  | Femur, starting at front of top, and wrapping around back along the linea aspera, then medially towards bottom. Also tendons of adductor longus and magnus and from the medial intermuscular speptum | By quadriceps tendon into medial border of patella and by muscle fibers into patella upper inner corner. Also tibial tuberosity via patellar ligament | Extend lower leg at knee; pull patella in and back to counter vastus lateralis | Slight overlap of vastus intermdius | Sartorius; band of Richer |
 |-----------------+----------------------+----------------------+----------------------+----------------------+----------------------|
 
 Sources:
