--- a/README.org
+++ b/README.org
@@ -79,6 +79,7 @@ Origin of Deltoid	lateral 1/3 of clavicle, acromion process, spine of scapula
 
 #+CAPTION: Sample review card
 #+NAME: anki.png
+#+ATTR_HTML: :style max-width:400px
 [[file:./anki.png][file:./anki.png]]
 
 ** Workflow
