--- a/README.org
+++ b/README.org
@@ -79,10 +79,7 @@ Origin of Deltoid	lateral 1/3 of clavicle, acromion process, spine of scapula
 
 ... and a sample flash card:
 
-#+CAPTION: Sample review card
-#+NAME: anki.png
-#+ATTR_HTML: :style max-width:50%
-[[file:./anki.png][file:./anki.png]]
+#+html: <p align="center"><img src="anki.png" /></p>
 
 ** Workflow
 
