--- a/README.org
+++ b/README.org
@@ -79,7 +79,7 @@ Origin of Deltoid	lateral 1/3 of clavicle, acromion process, spine of scapula
 
 ... and a sample flash card:
 
-#+html: <div style="max-width: 30%"><p align="left"><img src="anki.png" style="max-width:30%"/></p></div>
+[[file:./anki.png][file:./anki.png]]
 
 ** Workflow
 
