--- a/resources/muscle-structure.org
+++ b/resources/muscle-structure.org
@@ -6,8 +6,9 @@
 | Deltoid         | lateral 1/3 of clavicle, acromion process, spine of scapula | Deltoid tuberosity halfway down humerus | flex arm forward, abducts outward, pulls backward | Biceps brachii, tendon of pectoralis, infraspinatus, supraspinatus, teres major/minor, upper triceps | None                 |
 | Multifidus      | Sacrum, PSIS, spinous processes of vertebrae | Spinous processes of all vertebrae but the atlas | extend, laterally flex, rotate vertebral column | None                 | Gluteus maximus, Erector spinae, trapezius |
 | Scalenus Medius | Transverse processes from C2-C7 (occasionally C1) | Medial part of top of first rib | Bends neck laterally; lifts first rib during forced inspiration | None                 | Sternocleidomastoid, Omohyoid, Trapezius |
-| Vastus Medialis | Femur, starting at front of top, and wrapping around back along the linea aspera, then medially towards bottom. Also tendons of adductor longus and magnus and from the medial intermuscular speptum | By quadriceps tendon into medial border of patella and by muscle fibers into patella upper inner corner. Also tibial tuberosity via patellar ligament | Extend lower leg at knee; pull patella in and back to counter vastus lateralis | Slight overlap of vastus intermdius | Sartorius; band of Richer |
+| Vastus Medialis | Femur, starting at front of top, and wrapping around back along the linea aspera, then medially towards bottom. Also tendons of adductor longus and magnus and from the medial intermuscular speptum | By quadriceps tendon into medial border of patella and by muscle fibers into patella upper inner corner. Also tibial tuberosity via patellar ligament | Extend lower leg at knee; pull patella in and back to counter vastus lateralis | Slight overlap of vastus intermedius | Sartorius; band of Richer |
 | Gracilis        | Middle of pubic arch btwn pubic sympysis and ischial tuberosity | Tibia just below medial condyle, same as sartorius and semitendinosus (pes anserinus) | Adduct thigh at hip, flex lower leg at knee, assist medial rotation of lower leg | Adductor magnus, adductor magnus, adductor longus | Sartorius            |
+| Brachoradialis  | Humerus: distal part, "lateral supracondylar ridge" | thumb side of radius, proximal to styloid process | Flex forearm at elbow | Brachialis, extensor carpi radialis longus, pronator teres, flexor digitorum superficialis | Lateral head of triceps |
 |-----------------+----------------------+----------------------+----------------------+----------------------+----------------------|
 
 Sources:
